## PLUXML 5.8.3 (yyyy/mm/dd) ##
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)
FIX Comment editor is empty #418 (P3ter)
FIX Comments list sorting #419 (P3ter)
FIX Default theme : double underline on footer menu (P3ter)  

## PLUXML 5.8.2 (2020/02/09) ##
[+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
FIX #365 plxUtils::getLangs() optimisations (bazooka07)
FIX #367 plxUtils::sendmail() minor correction (bazooka07)
FIX #369 Comments indentation does not work on frontend (P3ter)
FIX #372 [i18n] missing L_CONFIG_ADVANCED_LOSTPASSWORD in oc, es, pl, pt, ro, ru, it (P3ter)
FIX #378 Add UTF-8 to plxUtils::urlify() (bazooka07)

## PLUXML 5.8.1 (sortie : 07/01/2020) ##
FIX #360 Undefined index: password_token
FIX #361 Use of undefined constant PLX_TEMPLATES
FIX #362 Uncaught Error: Class 'PlxTemplate' not found
FIX #363 Notice: Undefined index: name
FIX #364 warning messages and use browser language

## PLUXML 5.8 (sortie : 05/01/2020) ##
[+] PluCSS 1.3.1
[+] Feature "Mot de passe oublié" : envoi d'un lien par mail permettant la création d'un nouveau mot de passe (P3ter)
[+] Feature "Mot de passe oublié" : l'adresse e-mail devient obligatoire à l'installation de PluXml et à la création d'un utilisateur (P3ter)