@@ -3,6 +3,7 @@
 [+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
 [+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
 [+] plxToken and plxCapcha optimisations #406 (bazooka07)
+[+] Article thumbnail link is now the article URL #426 (Thatoo)
 FIX Articles and static pages with underscores are not visible #380 (P3ter)
 FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
 FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
